Added 'genre' table and the corresponding relationship table 'game_genre'. Genre tables are created as IGDB games are inserted.

--- a/settings.ini
+++ b/settings.ini
@@ -3,3 +3,7 @@ igdb_client_id = 0yr0r2fbldsuya8awjkp3r3kxe3znk
 igdb_bearer = b9hp4t4dbg9ajpzl6ne9qj90ovsmlc
 rawg_api_key = c1374952adee4d77a6519c7cc374e367
 ; Other rawg api key: 0a24c1f906b14571b145d09e787f6ecc
+
+[IGDB_SETTINGS]
+limit_num_games = 500
+num_pages_to_process = 4
