--- a/settings.ini
+++ b/settings.ini
@@ -4,6 +4,10 @@ igdb_bearer = b9hp4t4dbg9ajpzl6ne9qj90ovsmlc
 rawg_api_key = c1374952adee4d77a6519c7cc374e367
 ; Other rawg api key: 0a24c1f906b14571b145d09e787f6ecc
 
+[DATABASE]
+drop_existing = False
+
 [IGDB_SETTINGS]
 limit_num_games = 500
 num_pages_to_process = 4
+start_page = 1
