--- a/settings.ini
+++ b/settings.ini
@@ -5,9 +5,14 @@ rawg_api_key = c1374952adee4d77a6519c7cc374e367
 ; Other rawg api key: 0a24c1f906b14571b145d09e787f6ecc
 
 [DATABASE]
-drop_existing = False
+drop_existing = True
 
 [IGDB_SETTINGS]
 limit_num_games = 500
-num_pages_to_process = 4
+num_pages_to_process = 10
+start_page = 1
+
+[RAWG_SETTINGS]
+limit_num_games = 500
+num_pages_to_process = 10
 start_page = 1
